--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
         </ion-buttons>
         <ion-grid>
             <ion-row>
-                <ion-col>
+                <ion-col float-left>
                     <ion-title padding-top="16px">
                         Primero mi primaria
                     </ion-title>
@@ -21,7 +21,7 @@
 </ion-header>
 
 <ion-content>
-    <div id="touchlayer" style="width: 90%; height: 90%; position: absolute; z-index: 1" (click)="showHeader()"></div>
+    <div id="touchlayer" style="width: 100%; height: 100%; position: absolute; z-index: 1" (click)="showHeader()" ></div>
     <div id="area"></div>
 </ion-content>
 
