--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -28,7 +28,7 @@
                         <ion-card-title>Marcador #{{i}}</ion-card-title>
                     </ion-col>
                     <ion-col float-right>
-                        <a (click)="deleteBookMark(i)" float-right>
+                        <a (click)="deleteBookMark(bookmark.pageIndex)" float-right>
                             <ion-icon name="close"></ion-icon>
                         </a>
                     </ion-col>
