--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -3,8 +3,8 @@
         <ion-grid>
             <ion-row>
                 <ion-col>
-                    <ion-title padding-top="16px">
-                        Marcadores
+                    <ion-title padding-top="16px" class="pb-title">
+                        <span class="pb-text-1">Marcadores</span>
                     </ion-title>
                 </ion-col>
                 <ion-col>
