--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,4 +74,9 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** PadBook **/
+  --ion-color-pb-blue-1: #01184a;
+  --ion-color-pb-blue-2: #00ffff;
+
 }
