--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,31 @@
     <ion-menu>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-grid>
+            <ion-row>
+              <ion-col float-left text-center class="pb-logo">
+                <img src="assets/images/logo.svg" title="PadBook" alt="PadBook">
+              </ion-col>
+              <ion-col>
+                <ion-title class="pb-title">
+                  <div class="pb-text-1">Grado 1</div>
+                  <div class="pb-text-2">CONTENIDO</div>
+                </ion-title>
+              </ion-col>
+              <ion-col>
+                <a float-right (click)="closeMenu()">
+                  <ion-icon name="close-circle-outline"></ion-icon>
+                </a>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
         </ion-toolbar>
       </ion-header>
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerDirection]="'root'">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+              <!--<ion-icon slot="start" [name]="p.icon"></ion-icon>-->
               <ion-label>
                 <p (click)="goToPage(p.href)">{{p.title}}</p>
               </ion-label>
