--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,13 +5,16 @@
         </ion-buttons>
         <ion-grid>
             <ion-row>
-                <ion-col float-left>
-                    <ion-title padding-top="16px">
-                        Primero mi primaria
+                <ion-col float-left text-center>
+                    <img src="assets/images/logo.svg" title="PadBook" alt="PadBook">
+                </ion-col>
+                <ion-col>
+                    <ion-title class="pb-title">
+                        <span class="pb-text-1">Primero mi primaria</span> <span class="pb-text-2">Grado 1</span>
                     </ion-title>
                 </ion-col>
                 <ion-col>
-                    <ion-button [size]="small" routerLink="/bookmarks" float-right>
+                    <ion-button routerLink="/bookmarks" float-right class="pb-button-bm">
                         <ion-icon name="bookmark"></ion-icon>
                     </ion-button>
                 </ion-col>
@@ -26,23 +29,25 @@
 </ion-content>
 
 <ion-footer align-items-center *ngIf="showElement">
-    <ion-grid>
-        <ion-row>
-            <ion-col float-left>
-                <a (click)="prevPage()" float-left>
-                    <ion-icon name="rewind"></ion-icon>
-                </a>
-            </ion-col>
-            <ion-col style="text-align: center">
-                <a (click)="bookMarkPage()" >
-                    <ion-icon name="bookmark"></ion-icon>
-                </a>
-            </ion-col>
-            <ion-col float-right>
-                <a (click)="nextPage()" float-right>
-                    <ion-icon name="fastforward"></ion-icon>
-                </a>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+    <ion-toolbar>
+        <ion-grid>
+            <ion-row>
+                <ion-col float-left>
+                    <a (click)="prevPage()" float-left>
+                        <ion-icon name="arrow-dropleft-circle"></ion-icon>
+                    </a>
+                </ion-col>
+                <ion-col text-center>
+                    <a (click)="bookMarkPage()" >
+                        <ion-icon name="bookmark"></ion-icon>
+                    </a>
+                </ion-col>
+                <ion-col float-right>
+                    <a (click)="nextPage()" float-right>
+                        <ion-icon name="arrow-dropright-circle"></ion-icon>
+                    </a>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </ion-toolbar>
 </ion-footer>
