--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,130 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+/* ---------- Pages ---------- */
+
+/* Menu */
+
+ion-menu {
+  --ion-background-color: transparent;
+  /* Header */
+  ion-header {
+    ion-toolbar {
+      --ion-background-color: var(--ion-color-pb-blue-1);
+      .pb-logo {
+        min-width: 110px;
+      }
+      .pb-title {
+        .pb-text-1 {
+          font-size: 14px;
+          color: white;
+        }
+        .pb-text-2 {
+          font-size: 14px;
+          color: var(--ion-color-pb-blue-2);
+        }
+      }
+      a {
+        font-size: 30px;
+        color: var(--ion-color-pb-blue-2);
+      }
+    }
+  }
+  /* Content */
+  ion-content {
+    --ion-background-color: rgba(1, 24, 74, 0.9);
+    ion-list {
+      --ion-background-color: transparent;
+      ion-menu-toggle {
+        --ion-background-color: transparent;
+        ion-item {
+          --ion-border-color: var(--ion-color-pb-blue-2);
+          .item-native {
+            --ion-padding: 0 15px !important;
+          }
+          ion-label {
+            p {
+              color: white !important;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+/* Home */
+
+app-home {
+  /* Header */
+  ion-header {
+    ion-toolbar {
+      --ion-background-color: var(--ion-color-pb-blue-1);
+      ion-buttons {
+        ion-menu-button {
+          --color: var(--ion-color-pb-blue-2);
+        }
+      }
+      .pb-title {
+        padding: 10px;
+        .pb-text-1 {
+          font-size: 14px;
+          color: white;
+        }
+        .pb-text-2 {
+          padding-left: 5px;
+          font-size: 14px;
+          color: var(--ion-color-pb-blue-2);
+        }
+      }
+      .pb-button-bm {
+        --background: var(--ion-color-pb-blue-1);
+        --color: var(--ion-color-pb-blue-2);
+      }
+    }
+  }
+  /* Footer */
+  ion-footer {
+    ion-toolbar {
+      --ion-background-color: var(--ion-color-pb-blue-1);
+      a {
+        font-size: 30px;
+        color: var(--ion-color-pb-blue-2);
+      }
+    }
+  }
+}
+
+app-bookmarks {
+  ion-header {
+    ion-toolbar {
+      --ion-background-color: var(--ion-color-pb-blue-1);
+      ion-buttons {
+        ion-menu-button {
+          --color: var(--ion-color-pb-blue-2);
+        }
+      }
+      .pb-title {
+        padding: 10px;
+        .pb-text-1 {
+          font-size: 14px;
+          color: white;
+        }
+        .pb-text-2 {
+          padding-left: 5px;
+          font-size: 14px;
+          color: var(--ion-color-pb-blue-2);
+        }
+      }
+      .pb-button-bm {
+        --background: var(--ion-color-pb-blue-1);
+        --color: var(--ion-color-pb-blue-2);
+      }
+      a {
+        font-size: 30px;
+        color: var(--ion-color-pb-blue-2);
+      }
+    }
+  }
+}
