--- a/src/app/slide/slide.page.scss
+++ b/src/app/slide/slide.page.scss
@@ -1,5 +1,7 @@
-ion-slides {
-  height: 100% !important;
-  width: 100% !important;
-  text-align: center;
+//ion-slides {
+//  height: 100% !important;
+//  width: 100% !important;
+//  text-align: center;
+//}
+app-slide {
 }
