--- a/src/global.scss
+++ b/src/global.scss
@@ -136,3 +136,17 @@ app-bookmarks {
     }
   }
 }
+
+app-slide {
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .background-slider {
+    background: black;
+    height: 100%;
+    width: 100%;
+  }
+
+}
