--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,7 +24,7 @@
 </ion-header>
 
 <ion-content>
-    <div id="touchlayer" style="width: 100%; height: 100%; position: absolute; z-index: 1" hm-tap="showHeader()"></div>
+    <div id="touchlayer" style="width: 100%; height: 100%; position: absolute; z-index: 1" (click)="showHeader()"></div>
     <div id="area"></div>
 </ion-content>
 
