--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -29,7 +29,7 @@
                     </ion-col>
                     <ion-col float-right>
                         <a (click)="deleteBookMark(bookmark.pageIndex)" float-right>
-                            <ion-icon name="close"></ion-icon>
+                            <ion-icon name="close-circle"></ion-icon>
                         </a>
                     </ion-col>
                 </ion-row>
