--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
                 </ion-col>
                 <ion-col>
                     <ion-title class="pb-title">
-                        <span class="pb-text-1">Primero mi primaria</span> <span class="pb-text-2">Grado 1</span>
+                        <span class="pb-text-1">Inclusi&oacute;n</span> <span class="pb-text-2"></span>
                     </ion-title>
                 </ion-col>
                 <ion-col>
