--- a/src/global.scss
+++ b/src/global.scss
@@ -157,6 +157,17 @@ app-slide {
 
 }
 
+app-library {
+  .book-cover {
+    background-image: url("./assets/images/caratula.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 0;
+    padding-top: 66.64%;
+  }
+}
+
 //.epub-container {
 //  width: 100% !important;
 //  height: 100% !important;
