Agrega menu de opciones, dimensiones del libro y agrega base de datos para notas

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -48,6 +48,11 @@
                             <ion-select-option value="dark">Dark</ion-select-option>
                         </ion-select>
                     </ion-item>
+                    <ion-item>
+                        <div (click)="presentModal()">
+                            prueba
+                        </div>
+                    </ion-item>
                 </ion-col>
                 <ion-col float-right>
                     <a (click)="nextPage()" float-right>
