--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,24 +8,49 @@
                 <ion-col float-left text-center>
                     <img src="assets/images/logo.svg" title="PadBook" alt="PadBook">
                 </ion-col>
+                <!--<ion-col>-->
+                    <!--<ion-button routerLink="/bookmarks" float-right class="pb-button-bm">-->
+                        <!--<ion-icon name="bookmark"></ion-icon>-->
+                    <!--</ion-button>-->
+                <!--</ion-col>-->
                 <ion-col>
-                    <ion-title class="pb-title">
-                        <span class="pb-text-1">Inclusi&oacute;n</span> <span class="pb-text-2"></span>
-                    </ion-title>
+                    <ion-button (click)="openCustom()">
+                        <ion-icon name="search" ></ion-icon>
+                    </ion-button>
                 </ion-col>
                 <ion-col>
-                    <ion-button routerLink="/bookmarks" float-right class="pb-button-bm">
-                        <ion-icon name="bookmark"></ion-icon>
+                    <ion-button (click)="presentStylesPopOver()">
+                        <ion-icon name="color-palette" ></ion-icon>
+                    </ion-button>
+                </ion-col>
+                <ion-col>
+                    <ion-button (click)="presentStoragePopover()">
+                        <ion-icon name="grid"></ion-icon>
                     </ion-button>
                 </ion-col>
             </ion-row>
         </ion-grid>
+        <ion-buttons slot="end">
+
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
 
 <ion-content id="test">
-    <ion-searchbar (ionChange)="searchBook($event)"></ion-searchbar>
+    <ion-menu side="end" menuId="search" type="push" contentId="main-search" style="z-index: 1">
+        <ion-content>
+            <ion-searchbar (ionChange)="searchBook($event)" style="color: white"></ion-searchbar>
+                <ion-menu-toggle auto-hide="false" *ngFor="let result of searchResults">
+                <ion-list style="color: white">
+                    <ion-item>
+                        <p (click)="goToPageFromCfi(result.cfi)">{{result.excerpt}}</p>
+                    </ion-item>
+                </ion-list>
+            </ion-menu-toggle>
+        </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main-search"></ion-router-outlet>
     <!--<div id="touchlayer" style="width: 100%; height: 100%; position: absolute; z-index: 1" (click)="showHeader()"></div>-->
     <div id="area"></div>
 </ion-content>
@@ -43,18 +68,6 @@
                     <a (click)="bookMarkPage()" >
                         <ion-icon name="bookmark"></ion-icon>
                     </a>
-                    <ion-item style="background: white">
-                        <ion-label>Temas</ion-label>
-                        <ion-select (ionChange)="changeTheme($event)">
-                            <ion-select-option value="light">Light</ion-select-option>
-                            <ion-select-option value="dark">Dark</ion-select-option>
-                        </ion-select>
-                    </ion-item>
-                    <ion-item>
-                        <div (click)="presentModal()">
-                            <ion-icon name="cog"></ion-icon>
-                        </div>
-                    </ion-item>
                 </ion-col>
                 <ion-col float-right>
                     <a (click)="nextPage()" float-right>
