--- a/src/app/home/popovers/storage-options/storage-options-pop.page.html
+++ b/src/app/home/popovers/storage-options/storage-options-pop.page.html
@@ -1,5 +1,5 @@
-<ion-list>
+<ion-list class="popover">
     <ion-item button routerLink="/bookmarks" (click)="dismissPopover()">Bookmarks</ion-item>
     <ion-item button>Notas</ion-item>
-    <ion-item lines="none" detail="false" button (click)="dismissPopover()">Cerrar</ion-item>
+    <ion-item lines="none" detail="false" button (click)="dismissPopover()"><img src="assets/images/icon_close.svg"></ion-item>
 </ion-list>
