--- a/src/global.scss
+++ b/src/global.scss
@@ -184,3 +184,139 @@ app-library {
 //    height: 100% !important;
 //  }
 //}
+
+/* ---------- Pages ---------- */
+
+/* General */
+
+ion-content {
+  &.popover {
+    --padding-top: 20px;
+    --padding-end: 10px;
+    --padding-bottom: 20px;
+    --padding-start: 10px;
+    --background: var(--ion-color-pb-blue-1);
+    border: 1px solid var(--ion-color-pb-blue-2);
+    font-size: 14px;
+    --color: #fff;
+    ion-button {
+      margin: 0;
+      --padding-start: 0;
+      --padding-end: 0;
+      --background: var(--ion-color-pb-blue-1);
+      --box-shadow: none;
+    }
+    hr {
+      background-color: var(--ion-color-pb-blue-2);
+    }
+  }
+}
+
+ion-list {
+  &.popover {
+    padding: 20px;
+    background-color: var(--ion-color-pb-blue-1);
+    border: 1px solid var(--ion-color-pb-blue-2);
+    ion-item {
+      --padding-start: 0;
+      --padding-end: 0;
+      --background: var(--ion-color-pb-blue-1);
+      border-bottom: 1px solid var(--ion-color-pb-blue-2);
+      font-size: 14px;
+      color: #fff;
+      &:last-child {
+        border-bottom: 0;
+      }
+    }
+  }
+}
+
+/* Library */
+
+app-library {
+  /* Header */
+  ion-header {
+    --ion-background-color: var(--ion-color-pb-blue-1);
+    .pb-title-text {
+      margin: 0 20px;
+      padding: 5px 0 10px 0;
+      font-size: 12px;
+      color: #fff;
+      letter-spacing: 1px;
+      display: inline-block;
+      &.active {
+        border-bottom: 2px solid var(--ion-color-pb-blue-2);
+        color: var(--ion-color-pb-blue-2);
+      }
+    }
+    .pb-title-line {
+      color: var(--ion-color-pb-blue-2);
+    }
+  }
+  /* Content */
+  ion-content {
+    h1 {
+      margin: 0;
+      font-size: 14px;
+      letter-spacing: 2px;
+    }
+    .pb-book-item {
+      border-top: 1px solid var(--ion-color-pb-border);
+      .pb-book-title {
+        padding-top: 20px;
+        font: {
+          size: 12px;
+          weight: bold;
+        }
+        color: var(--ion-color-pb-blue-1);
+      }
+    }
+  }
+  /* Footer */
+  ion-footer {
+    --ion-background-color: var(--ion-color-pb-blue-1);
+  }
+}
+
+/* Home */
+
+app-home {
+  /* Header */
+  ion-header {
+    .pb-title-text {
+      padding: 20px;
+      font-size: 12px;
+      color: var(--ion-color-pb-blue-2);
+      letter-spacing: 1px;
+    }
+    ion-button {
+      &.pb-button {
+        margin: 0;
+        --padding-start: 0;
+        --padding-end: 0;
+        --background: var(--ion-color-pb-blue-1);
+        --box-shadow: none;
+      }
+    }
+  }
+  /* Content */
+  ion-content {
+    .pb-right {
+      padding: 20px;
+      ion-menu-toggle {
+        ion-list {
+          ion-item {
+            --padding-start: 0;
+            --padding-end: 0;
+            border-top: 1px solid var(--ion-color-pb-blue-2);
+            font-size: 14px;
+            color: #fff;
+            &:last-child {
+              border-bottom: 1px solid var(--ion-color-pb-blue-2);
+            }
+          }
+        }
+      }
+    }
+  }
+}
