--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,13 @@
         <ion-toolbar>
           <ion-grid>
             <ion-row>
-              <ion-col float-left text-center class="pb-logo">
+              <!--<ion-col float-left text-center class="pb-logo">
                 <img src="assets/images/logo.svg" title="PadBook" alt="PadBook">
-              </ion-col>
+              </ion-col>-->
               <ion-col>
                 <ion-title class="pb-title">
-                  <div class="pb-text-1">Inclusi&oacute;n</div>
-                  <div class="pb-text-2">CONTENIDO</div>
+                  <!--<div class="pb-text-1">Inclusi&oacute;n</div>-->
+                  <div class="pb-text-2">TÍTULO</div>
                 </ion-title>
               </ion-col>
               <ion-col>
