--- a/src/global.scss
+++ b/src/global.scss
@@ -189,6 +189,11 @@ app-library {
 
 /* General */
 
+ion-modal {
+  --width: 80% !important;
+  --height: 60% !important;
+}
+
 ion-content {
   &.popover {
     --padding-top: 20px;
@@ -205,6 +210,11 @@ ion-content {
       --padding-end: 0;
       --background: var(--ion-color-pb-blue-1);
       --box-shadow: none;
+      &.pb-border {
+        --padding-start: 10px;
+        --padding-end: 10px;
+        border: 1px solid var(--ion-color-pb-blue-2);
+      }
     }
     hr {
       background-color: var(--ion-color-pb-blue-2);
