Agrega libros y nombre de libro a tabla de contenido y home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
               <ion-col>
                 <ion-title class="pb-title">
                   <!--<div class="pb-text-1">Inclusi&oacute;n</div>-->
-                  <div class="pb-text-2">TÍTULO</div>
+                  <div class="pb-text-2">{{bookName}}</div>
                 </ion-title>
               </ion-col>
               <ion-col>
