--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,7 +29,7 @@
                     </ion-button>
                 </ion-col>-->
                 <ion-col float-left size="5">
-                    <div class="pb-title-text">GENESIS</div>
+                    <div class="pb-title-text">{{bookName}}</div>
                 </ion-col>
                 <ion-col float-right text-right>
                     <ion-grid>
