--- a/src/assets/themes/themes.css
+++ b/src/assets/themes/themes.css
@@ -13,13 +13,13 @@
 
 .light {
     background: #fff;
-    color: #000;
+    /*color: #000;*/
 }
 
 .light p {
-	color: #000;
+	/*color: #000;*/
 }
 
 .light a {
-	color: #01184a;
+	/*color: #01184a;*/
 }
