Agrega marcadores. Esta pendiente terminar

--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -28,7 +28,7 @@
                         <ion-card-title>Marcador #{{i}}</ion-card-title>
                     </ion-col>
                     <ion-col float-right>
-                        <a (click)="deleteBookMark(bookmark.pageIndex)" float-right>
+                        <a (click)="deleteBookMark(bookmark)" float-right>
                             <ion-icon name="close-circle"></ion-icon>
                         </a>
                     </ion-col>
